update alta paquete

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="baseAplicacion">#e7cf95</color>
     <color name="news_tomato">#e7412b</color>
     <color name="news_white">#ffffff</color>
+    <color name="colorBlackgray">#1d1b1b</color>
 </resources>
