--- a/app/src/main/res/layout/item_materia_lineal.xml
+++ b/app/src/main/res/layout/item_materia_lineal.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
 
         <TextView
@@ -39,4 +39,10 @@
 
             />
     </LinearLayout>
+
+    <View
+        android:background="@color/colorBlackgray"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"/>
+
 </LinearLayout>
